lab1.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0; 
}

body {
    font-family: "Poppins", sans-serif;
    
}


header {
    width: 100%;
    padding: 20px; 
    height: 80px;
    background-color: #11223a; 
    /* https://colorhunt.co/palette/ff65001e3e620b192c000000  */
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;


}


#lab1 {
    display: flex;
    align-items: center;
    font-size: 1.1rem;
    margin-left: 10px;
    letter-spacing: 1px;
}

a.current  {
  border-bottom: 2px solid orangered; 
  color: orangered;
}


nav.links ul{ 
    font-size: 1.1rem;
    text-transform: uppercase;    
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
    gap: 2rem; 
    margin-right: 1rem; 
}



nav ul li {
    list-style-type: none;
    padding: 5px; 
    letter-spacing: 1px;
 
}


nav ul li:hover {
    transform: scale(1.1);
    transition: 0.2s;
}

nav ul li a {
    color: white;
    text-decoration: none;
}

nav ul li a:hover, nav ul li a:focus {
  color: orangered; 
 
}



.site-container {
  margin: 0 auto; 
  /* border: 1px solid red; */
  /* width: 90%; */
  max-width: 1920px;
}




.content-grid-intro{
    width: 100%;
    display: grid;
    /* grid-template-columns: repeat(2, 1fr); */
    /* grid-template-rows: repeat(3, auto); */
    /* grid-template-columns: 2fr 1fr; */

    grid-template-columns: 1fr 1fr; /* Ändra till lika stora kolumner */
    justify-items: center; /* Centrera horisontellt */
    align-items: center;    /* Centrera vertikalt */
    height: 100vh;          /* Fyll hela höjden av viewporten för centering */
  

    /* border: 5px solid; */
}

.content-grid{
  width: 100%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, auto);
  border: 3px solid orange;
  min-height: 400px; 

} 


.hi {
  color: orangered;
  font-size: 5.5rem;
  font-weight: 900;
  margin-bottom: -10px; 
}


.main-text-intro {
  font-size: 2rem;
  text-align: center;
  /* margin: 150px 0px 10px 130px; */
  max-width: 800px;
  grid-column: 1;
  font-weight: 300;
  /* border: 2px solid green;  */
  margin-top: -300px; 
  margin-left: auto; 
}


 .main-text {
  font-size: 1.6rem;
  text-align: left;
  margin: 150px 0px 0px 0px;
  margin-bottom: 300px;
  grid-column: 2 / 3;
  font-weight: 300;
  border: 2px solid green; 
}

.main-text h2 {
  color: orangered; 
}


.portrait {

  grid-column: 2;
  /* grid-row: 1 / 1; */
  /* padding-right: 300px;
  margin-top: 80px;  */

}

.portrait img {
  width: 100%;
  height: auto;
  max-width: 600px;



}



#hamburger-icon {
    margin: auto 0;
    display: none;
    cursor: pointer;
  }
  
  #hamburger-icon div {
    width: 35px;
    height: 3px;
    background-color: white;
    margin: 6px 0;
    transition: 0.4s;
  }
  
  .open .bar1 {
    -webkit-transform: rotate(-45deg) translate(-6px, 6px);
    transform: rotate(-45deg) translate(-6px, 6px);
  }
  
  .open .bar2 {
    opacity: 0;
  }
  
  .open .bar3 {
    -webkit-transform: rotate(45deg) translate(-6px, -8px);
    transform: rotate(45deg) translate(-6px, -8px);
  }
  
  .open .mobile-menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    background-color: #353836;
    color:white; 
    
  }
  
  .mobile-menu {
    display: none;
    position: absolute;
    top: 80px;
    left: 0;
    height: calc(100vh - 50px);
    width: 100%;
    padding-top: 50px; 
    font-size: 1.1rem;
  }
  
  .mobile-menu li {
    margin-bottom: 1rem;
    list-style: none;
  }
  
  .mobile-menu li a {
    color: white;
    text-decoration: none;
  }









  
  
  @media only screen and (max-width: 660px) {
    header nav {
      display: none;
    }
  
    #hamburger-icon {
      display: block;
    }
.site-container {
  width: 100%;
}



/* .portrait img {
  width: 100%;
  height: auto;
  margin-top: 100px; 
} */


  }






  


  /* Style the rainbow text element. */
.rainbow-text {
  /* Create a conic gradient. */
  /* Double percentages to avoid blur (#000 10%, #fff 10%, #fff 20%, ...). */
  background: #CA4246;
  background-color: #CA4246;
  background: conic-gradient(
    #CA4246 16.666%, 
    #E16541 16.666%, 
    #E16541 33.333%, 
    #F18F43 33.333%, 
    #F18F43 50%, 
    #8B9862 50%, 
    #8B9862 66.666%, 
    #476098 66.666%, 
    #476098 83.333%, 
    #A7489B 83.333%);
  
  /* Set thee background size and repeat properties. */
  background-size: 57%;
  background-repeat: repeat;
  
  /* Use the text as a mask for the background. */
  /* This will show the gradient as a text color rather than element bg. */
  background-clip: text;
  -webkit-text-fill-color: transparent; 
  
  /* Animate the text when loading the element. */
  /* This animates it on page load and when hovering out. */
  animation: rainbow-text-animation-rev 0.5s ease forwards;
  cursor: pointer;
}

/* Add animation on hover. */
.rainbow-text:hover {
  animation: rainbow-text-animation 0.5s ease forwards;
}

/* Move the background and make it larger. */
/* Animation shown when hovering over the text. */
@keyframes rainbow-text-animation {
  0% {
    background-size: 57%;
    background-position: 0 0;
  }
  20% {
    background-size: 57%;
    background-position: 0 1em;
  }
  100% {
    background-size: 300%;
    background-position: -9em 1em;
  }
}

/* Move the background and make it smaller. */
/* Animation shown when entering the page and after the hover animation. */
@keyframes rainbow-text-animation-rev {
  0% {
    background-size: 300%;
    background-position: -9em 1em;
  }
  20% {
    background-size: 57%;
    background-position: 0 1em;
  }
  100% {
    background-size: 57%;
    background-position: 0 0;
  }
}



footer {
  height: 50px; 
  background-color: black;

}

